# basaltclient

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE  blob_control.go  blob_data.go  blob_pool.go  blob_pool_test.go  blob_protocol.go  blob_protocol_test.go  client.go  controller_client.go  doc.go  go.mod  go.sum  logger.go  path.go  path_test.go  quorum_writer.go  quorum_writer_test.go
.claude/rules/: bazel.md
basaltpb/: BUILD.bazel  blob.pb.go  blob.proto  blob_grpc.pb.go  codec.go  common.pb.go  common.proto  compactor.pb.go  compactor.proto  compactor_grpc.pb.go  config.go  controller.pb.go  controller.proto  controller_grpc.pb.go  sealed.go  uuid.go  zombie.go
internal/blob/: client.go  control.go  data.go  pool.go  pool_test.go  protocol.go  protocol_test.go  quorum_writer.go  quorum_writer_test.go
internal/compactor/: client.go
internal/controller/: client.go
proto/basaltpb/: blob.proto  common.proto  compactor.proto  controller.proto
testdata/: path
